# linkedin-automation

./: .gitignore  README.md  bot.py  install.ps1  install.sh  pyproject.toml  pytest.pyi  replies.yaml  setup.py
bot/: auth.py  browser_fallback.py  cli.py  comments.py  config.py  config_defaults.py  config_io.py  config_migrate.py  connections.py  db.py  invitations.py  killswitch.py  lockfile.py  logging_config.py  messaging.py  models.py  models.pyi  orchestrator.py  personalization.py  posts.py  project_paths.py  rate_limit.py  replies.py  runtime_session.py  setup_wizard.py  templates.py  updater.py  urn.py  urn.pyi  voyager.py
bot/cli_commands/: config_cmd.py  init_cmd.py  logs_cmd.py  run_cmd.py  scheduler_cmd.py  setup_cmd.py  status_cmd.py  update_cmd.py
bot/onboarding/: __init__.py  steps.py  wizard.py
bot/scheduler/: __init__.py  base.py  macos.py  windows.py
docs/: JOURNEY.md
launchd/: com.user.linkedin-autoreply.plist  install.sh  uninstall.sh
launchd/tests/: test_auth.py  test_cli_config.py  test_cli_scheduler.py  test_cli_update.py  test_config.py  test_config_io.py  test_invitations.py  test_killswitch.py  test_models.py  test_onboarding.py  test_orchestrator_dm.py  test_posts.py  test_runtime_auth.py  test_scheduler_base.py  test_scheduler_macos.py  (+4 more)
tests/: test_cli.py  test_comments.py  test_config_defaults.py  test_config_migrate.py  test_connections.py  test_db.py  test_installer_scripts.py  test_lockfile.py  test_messaging.py  test_onboarding.py  test_personalization.py  test_replies.py  test_scheduler_windows.py  test_updater.py
